# Voxelized2D-Haskell

./: .gitignore  HaskellLib.cabal  LICENSE.txt  TODO.txt  Voxelized2D-Haskell.cabal  stack.yaml
include/GLFW/: glfw3dll.h
include/glad/: glad.h
resources/help/: CommonImports  GameArchitexture
resources/shaders/: color.vert  texture.frag  texture.vert  texture_color.frag  texture_color.vert
src/: Common.hs  Defaults.hs  InlineDo.hs  Main.hs  Registry.hs  Timer.hs  WindowInfo.hs  glad.c
src/Exp/: Stuff.hs
src/Graphics/: OpenGL.c  OpenGL.hs
src/Graphics/Render/: RenderVertFrag.hs
src/Graphics/Shader/: ShaderUtils.hs
src/Math/: AlgObj.hs  Collision.hs  Nat.hs
src/Math/Geometry/: Line2.hs  SShape2.hs  Square2.hs  Triangle.hs  Triangle2.hs
src/Math/Linear/: Mat.hs  Vec.hs  Vect.hs
src/Memory/: ArrayBuffer.hs  MemBlock.hs  VoxelGrid2.hs
src/Pack/: CorePack.hs
src/Render/: Renderer.hs
src/TypeClass/: Append.hs  Vector.hs
