name:                 HaskellLib
version:              0.1.0.0
synopsis:
-- description:
-- license:
-- license-file:
homepage:
author:               russoul
maintainer:           russoulmc@gmail.com
category:
-- copyright:
build-type:           Simple
-- extra-source-files:
cabal-version:        >=1.10

executable HaskellLib
  main-is:              Main.hs
  extra-lib-dirs:       lib
  extra-libraries:      opengl32, glfw3
  include-dirs:         include/GLFW, include/glad, include/KHR, include
  includes:             glfw3.h, glfw3dll.h

  c-sources:           src/glad.c, src/Graphics/OpenGL.c
    -- These flags will be passed to the C compiler
  cc-options:          -Wall -O2
    -- Libraries to link the code with.

  -- other-modules:
  -- other-extensions:
  --exposed-modules:      GLEW
  build-depends:        base >= 4.7 && < 5
                       , ghc-typelits-natnormalise >= 0.5.3
                       , bindings-GLFW >= 3.1.2.2
                       , time >= 1.6.0.1
                       , inline-c >= 0.5.6.1
                       , mtl >= 2.2.1
                       , FindBin
                       , filepath
                       , directory
                       , hashmap
                       , array == 0.5.1.1
  hs-source-dirs:       src
  default-language:     Haskell2010
  extensions:           BangPatterns,TypeFamilies,TypeOperators,KindSignatures,GADTs,DataKinds,FlexibleContexts,AllowAmbiguousTypes,
                        RankNTypes,ForeignFunctionInterface,MultiParamTypeClasses,TypeSynonymInstances,FlexibleInstances,
                        PolyKinds,UndecidableInstances,PartialTypeSignatures,QuasiQuotes,TemplateHaskell
