name:                 Voxelized2D-Haskell
version:              0.1.0.0
synopsis:
-- description:
-- license:
-- license-file:
homepage:
author:               russoul
maintainer:           russoulmc@gmail.com
category:
-- copyright:
build-type:           Simple
-- extra-source-files:
cabal-version:        >=1.10

executable exe
  main-is:              Main.hs
  extra-lib-dirs:       
  extra-libraries:      GL
  include-dirs:         include/GLFW, include/glad, include/KHR, include
  includes:             glfw3.h, glfw3dll.h

  ghc-options:          -O2 -O -fspecialise -funbox-strict-fields -fspecialise-aggressively -fexpose-all-unfoldings

  c-sources:           src/glad.c, src/Graphics/OpenGL.c
    -- These flags will be passed to the C compiler
  cc-options:          -Wall -O2
    -- Libraries to link the code with.

  -- other-modules:
  -- other-extensions:
  --exposed-modules:      GLEW
  build-depends:        base
                       , bindings-GLFW >= 3.1.2.3
                       , template-haskell
                       , stm
                       , ghc-typelits-natnormalise
                       , time
                       , inline-c
                       , mtl
                       , FindBin
                       , filepath
                       , directory
                       , hashmap
                       , array >= 0.5.2.0
                       , vector
                       , primitive
                       , lens
                       , hashtables >= 1.2.2.1
                       , safe-globals
                       , singletons
  hs-source-dirs:       src
  default-language:     Haskell2010
  extensions:           BangPatterns,TypeFamilies,TypeOperators,KindSignatures,GADTs,DataKinds,FlexibleContexts,AllowAmbiguousTypes,
                        RankNTypes,ForeignFunctionInterface,MultiParamTypeClasses,TypeSynonymInstances,FlexibleInstances,
                        PolyKinds,UndecidableInstances,PartialTypeSignatures,QuasiQuotes,TemplateHaskell,DuplicateRecordFields
